--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <nav id="navbar">
     <a href="#first-section">
-      Análisis de textos
+      ANÁLISIS DE TEXTOS
     </a>
     <a href="#second-section">
-      Clases
+      CLASES
     </a>
     <a href="#third-section">
-      Reflexiones
+      REFLEXIONES
     </a>
   </nav>
   <section id="welcome-section">
@@ -90,12 +90,12 @@
   <hr id="second-section">
   <section id="sessions">
     <h1 id="section-title">
-      Clases
+      CLASES
     </h1>
     <details>
       <summary>
         <h1>
-          Sesión de Gamificación
+          Sesión online
         </h1>
         <h2>
           Resumen, planificación y recursos
@@ -120,7 +120,7 @@
     <details>
       <summary>
         <h1>
-          Sesión online
+          Sesión Aula Invertida
         </h1>
         <h2>
           Resumen, planificación y recursos
@@ -148,33 +148,79 @@
     <details>
       <summary>
         <h1>
-          Sesión Aula Invertida
+          Sesión de Gamificación
         </h1>
         <h2>
           Resumen, planificación y recursos
         </h2>
       </summary>
+      <h3>
+        <u>Resumen</u>
+      </h3>
       <p>
-        En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
-      En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso · En progreso ·
+      Con la sesión gamificada se pretende poner el juego y la competitividad
+      al servicio del aprendizaje del alumnado. No se tratará de impartir
+      nuevos contenidos sino de asentar y poner en práctica los de las dos
+      sesiones anteriores.<br>
+      Previamente a la sesión, ya se habrá avisado al alumnado de que esta
+      sesión se dedicará a poner en práctica lo aprendido en un juego, pero
+      los detalles del mismo se explicarán en la misma sesión. Se conformarán
+      grupos o equipos de manera aleatoria, y se le asignarán dos dados a 
+      cada uno. El juego consistirá en una versión del más famoso "Monopoly" 
+      pero enfocado en este caso en la perspectiva de las personas trabajadoras.
+      La idea es que con cada vuelta al tablero se de por finalizado un mes de 
+      trabajo, y por tanto cada equipo cobre en función del trabajo que hayan 
+      conseguido realizar en el juego. Además de recordar algunos conceptos fundamentales 
+      relativos al mundo laboral, como el salario, la Seguridad Social o los 
+      convenios colectivos, el objetivo fundamental será la adquisición de 
+      práctica en la realización de nóminas, de modo que el alumnado llegue a 
+      interiorizar su importancia y a manejar bien las cuestiones más relevantes en 
+      torno a estas.
       </p>
+      <h3>
+        <u>Planificación</u>
+      </h3>
+      <p>
+      Encontrarás en los siguientes hipervínculos los documentos con 
+      <a href="Planificacion clase gamificacion.pdf" target="_blank"><b>la planificación de la sesión</b></a>
+      y <a href="Normas Monofoly.pdf" target="_blank"><b>las reglas del juego</b></a>.
+      </p>
+      <h3>
+        <u>Recursos</u>
+      </h3>
+      <h4>
+      Tablero:
+      </h4>
+      <div id="tablero">
+      <img src="Tablero monopoly final.png" alt="tablero">
+      </div>
+      <h4>
+        Cartas (ejemplos):
+      </h4>
+      <div id="cartas-ejemplo">
+      <img src="cartas-1.png" alt="cartas-ejemplo-1">
+      </div>
+      <div id="cartas-ejemplo">
+      <img src="cartas-2.png" alt="cartas-ejemplo-2">
+      </div>
+      <div id="cartas-ejemplo">
+      <img src="cartas-3.png" alt="cartas-ejemplo-3">
+      </div>
+      <div id="cartas-ejemplo">
+      <img src="cartas-4.png" alt="cartas-ejemplo-4">
+      </div>
+      <h4>
+      Plantilla de nómina:
+      </h4>
+      <div id="nomina">
+      <img src="plantilla nomina.png" alt="plantilla-nomina">
+      </div>
     </details>
   </section>
   <hr id="third-section">
   <section id="reflections">
     <h1 id="section-title">
-      Reflexiones
+      REFLEXIONES
     </h1>
       <details>
       <summary>
