--- a/index.html
+++ b/index.html
@@ -146,17 +146,11 @@
         Tras esta parte de la sesión, ya en el aula, la clase consistirá en la proyección de nóminas para que, en grupos, se identifiquen sus partes y comenten sus características. Se incluirán algunas nóminas con errores, conceptos mal ubicados o desglosados, o directamente sin algunos apartados para comprobar el grado de interiorización de todo el temario.
       </p>
       <h3>
-        <u>Planificación</u>
+        <u>Planificación y recursos</u>
       </h3>
       <p>
-        En el siguiente hipervínculo puede accederse a la <a href="Planificacion sesión aula invertida.pdf" target="_blank"><b>planificación de la sesión de aula invertida</b></a>.
+        En los siguientes hipervínculos puede accederse a la <a href="Planificacion sesión aula invertida.pdf" target="_blank"><b>planificación de la sesión de aula invertida</b></a> y al <a href="https://drive.google.com/file/d/1bjWuUACHlsQVqO31oCHYziwkwoo1Oe9R/view?usp=sharing" target="_blank"><b>vídeo-repaso de la sesión</b></a>.
       </p>
-      <h3>
-        <u>Recurso</u>
-      </h3>
-      <video width="500" height="300px" controls>
-        <source src="video-nominas.mp4" type="video/mp4">
-      </video>
     </details>
     <details>
       <summary>
